# hotpotfish_l4d2_vpk_manager

./: .gitignore  README.md  READMECN.md  environment.yml  flet.json  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
assets/i18n/: en.arb  zh.arb
scripts/: build-and-package.ps1  run-built-app.ps1
src/: __init__.py  _architecture.md  app.py
src/core/: __init__.py
src/core/localization/: README.md  __init__.py  localizations.py
src/core/services/: __init__.py  storage_service.py
src/core/viewmodels/: __init__.py  base_viewmodel.py
src/core/widgets/: __init__.py
src/features/: __init__.py
src/features/vpk_manager/screens/: __init__.py  vpk_manager_screen.py
src/features/vpk_manager/services/: __init__.py  vpk_export_service.py  vpk_metadata_service.py
src/features/vpk_manager/viewmodels/: __init__.py  vpk_manager_viewmodel.py
