[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "l4d2-vpk-manager"
version = "1.0.0"
description = "A Flet-based application for managing Left 4 Dead 2 (L4D2) VPK (game package) files"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "hotpotfish", email = "your-email@example.com"}
]
keywords = ["left4dead2", "vpk", "game-modding", "flet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: First Person Shooters",
]
dependencies = [
    "flet==0.24.1",
    "flet-core==0.24.1",
    "flet-runtime==0.24.1",
    "requests>=2.32.5",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "py7zr>=0.20.0",
    "vpk>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/hotpotfish/hotpotfish_l4d2_vpk_manager"
Repository = "https://github.com/hotpotfish/hotpotfish_l4d2_vpk_manager.git"
Issues = "https://github.com/hotpotfish/hotpotfish_l4d2_vpk_manager/issues"

[tool.setuptools]
packages = ["src", "assets"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["__pycache__"]
